# SeamCarving

./: .gitignore  CAS.pgm_processed.pgm  CMakeLists.txt  Five_circles.pgm  Makefile  README.md  SeamCarvingCalculator.xlsx  excelTestCase.pgm  excelTestCase.pgm_processed  horizontal.pgm  joconde.pgm_processed.pgm  seam_carver.cpp  seamcarving  seamcarving.cpp  test.pgm  twoBalls.pgm  twoBalls.pgm_processed.pgm  twoBalls_processed_0_116.pgm
test_cases/: CAS.pgm  test.pgm  test2.pgm  twoBalls_processed_211_68.pgm
